# f1podigami

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  build_alignments_html.py  build_charts.py  build_charts_page.py  build_html.py  build_soulmates_html.py  charts.css  charts.html  compute_alignments.py  compute_career_podiums.py  compute_soulmates.py  count_combos.py  fetch_podiums.py  fetch_standings.py  fetch_top10.py  index.css  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  seasons.css  seasons.html  soulmates.css  soulmates.html  style.css  update.py
.clude/: CLAUDE.md
.github/: dependabot.yml  pull_request_template.md
assets/: index.css  index.js  overdue.js  podigami.css  podigami.js  seasons.css  seasons.js  soulmates.css  style.css  theme.js
data/: alignments.json  career_podiums.json  combos.json  constructor_standings.json  current_drivers.json  driver_races.json  f1-circuits.geojson  f1_race_links.json  grid_penalties.json  model_eval.json  overdue.json  podigami.json  podiums.json  qualifying.json  race_results.json  schedule.json  soulmates.json  standings.json  top10.json  unlikeliest.json
src/: build_site.py  check_update_due.py  update.py  wait_for_results.py
tests/: conftest.py  test_backtest.py  test_build_combos.py  test_build_links.py  test_build_output.py  test_build_overdue.py  test_build_podigami.py  test_build_rows.py  test_build_scripts.py  test_build_unlikeliest.py  test_check_update_due.py  test_compute_overdue.py  test_compute_podigami.py  (+24 more)
(+66 files in other folders)
