[project]
name = "f1podigami"
version = "0.1.0"
description = "A scorigami-style predictor for never-before F1 podium trios."
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["dist"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors/warnings (E, W), isort (I),
# pyupgrade (UP), flake8-bugbear (B), comprehensions (C4).
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = [
    "E501", # line length is handled by the formatter; long HTML f-strings are fine
]

[tool.ruff.lint.per-file-ignores]
# Tests and builders adjust sys.path before importing local packages.
"tests/*" = ["E402"]
"src/build/*" = ["E402"]
"src/**/*" = ["E402"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/fetch/*",       # network fetchers aren't unit-tested
    "src/update.py",     # thin subprocess orchestrator (smoke-tested via CI run)
    "src/build_site.py", # thin subprocess orchestrator (exercised by the dist fixture)
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
